@@ -117,7 +117,7 @@ The repository may no longer be available or could not be contacted because of n
 		      <property name="can_focus">True</property>
 		      <property name="editable">False</property>
 		      <property name="justification">GTK_JUSTIFY_LEFT</property>
-		      <property name="wrap_mode">GTK_WRAP_NONE</property>
+		      <property name="wrap_mode">GTK_WRAP_WORD</property>
 		      <property name="cursor_visible">False</property>
 		      <property name="pixels_above_lines">3</property>
 		      <property name="pixels_below_lines">3</property>
