@@ -12,7 +12,11 @@ synaptic (0.63.2) UNRELEASED; urgency=low
   * Set version labels selectable in package properties (LP: #76568)
   * disable 'Lock Version' and 'Automatically installed' menu entries for a
     normal user (LP: #309906)
-
+  * wrap lines in textarea of dialog_update_failed (LP: #237455)
+  * set textarea read-only in generic error dialog (LP: #403100)
+  * Change 'Icon Legend' dialog to fixed size (LP: #374376)
+  * add tooltip to 'properties' and 'search' buttons (LP: #202681)
+ 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Feb 2010 11:13:45 +0100
 
 synaptic (0.63.1) unstable; urgency=low
